# snips-nlu-rebirth

./: .gitignore  Cargo.toml  LICENSE  PREBUILT.md  README.md  XCOMPILE.md  snips-nlu.toml.dist
src/: main.rs
src/mqtt/: mod.rs
src/schema/: config.rs  hermes.rs  mod.rs  snips_nlu.rs
wheels/: README.md  snips_nlu-0.20.2-py3-none-any.whl  snips_nlu_utils-0.9.1-cp37-cp37m-linux_armv7l.whl
