[package]
name = "snips-nlu-rebirth"
version = "1.0.1"
authors = ["JRK"]
edition = "2018"

[dependencies]
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
serde_json = "1.0"
rumqtt = "0.31.0"
crossbeam-channel = "0.3"
log = "0.4.0"
env_logger = "0.7.1"
clap = "2.32"
toml = "0.5.5"
serde = "1.0.104"
serde_derive = "1.0.104"




